--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,11 +11,29 @@
         style="@style/Base.Widget.AppCompat.Button.Colored"
         android:layout_width="260dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:background="?attr/colorPrimary"
         android:text="Sign-in"
         android:textColor="@color/white"
-        android:textSize="16sp"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textNotif"
+        style="@style/Theme.ColeAttendanceProject"
+        android:layout_width="255dp"
+        android:layout_height="40dp"
+        android:background="?attr/colorPrimaryVariant"
+        android:ems="10"
+        android:text="(Success/Failed)"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+
+        app:layout_constraintBottom_toTopOf="@+id/signButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,24 +43,26 @@
         style="@style/Theme.ColeAttendanceProject"
         android:layout_width="255dp"
         android:layout_height="40dp"
+        android:layout_marginBottom="16dp"
         android:background="?attr/colorSecondaryVariant"
         android:ems="10"
+        android:hint="NetID here"
+        android:textColorHint="@color/white"
         android:inputType="textPersonName"
-        android:text="(Success/Failed)"
         android:textAlignment="center"
-        android:textSize="16sp"
+        android:textColor="@color/white"
+        android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/signButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.513" />
+        app:layout_constraintTop_toBottomOf="@+id/textNotif" />
 
     <ImageButton
         android:id="@+id/bluetoothButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="32dp"
         android:background="#2196F3"
         android:onClick="configureBluetoothButton"
         app:layout_constraintEnd_toEndOf="parent"
