Fix for dark mode.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:ems="10"
         android:text="@string/defaultMsg"
         android:textAlignment="center"
-        android:textColor="@color/white"
+        android:textColor="?android:textColorPrimary"
         android:textSize="20sp"
 
         app:layout_constraintBottom_toTopOf="@+id/editText"
@@ -52,8 +52,8 @@
         android:hint="@string/inputNetID"
         android:inputType="textPersonName"
         android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textColorHint="@color/black"
+        android:textColor="?android:textColorPrimary"
+        android:textColorHint="?android:textColorPrimaryInverse"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
