--- a/app/src/main/res/layout/activity_bluetooth.xml
+++ b/app/src/main/res/layout/activity_bluetooth.xml
@@ -15,7 +15,7 @@
         android:text=""
         android:textAlignment="center"
         android:textSize="20sp"
-        android:textColor="#000"/>
+        android:textColor="?android:textColorPrimary"/>
 
     <ImageView
         android:id="@+id/bluetoothIv"
@@ -30,7 +30,7 @@
         android:text=""
         android:textAlignment="center"
         android:textSize="20sp"
-        android:textColor="#000"
+        android:textColor="?android:textColorPrimary"
         android:layout_marginTop="16dp" />
 
     <Button
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/connect_to_device"
-        android:textColor="@color/black"
+        android:textColor="?android:textColorPrimary"
         android:layout_marginTop="16dp"
         style="@style/Base.Widget.AppCompat.Button.Colored"/>
 
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/turn_on"
-        android:textColor="@color/black"
+        android:textColor="?android:textColorPrimary"
         android:layout_marginTop="16dp"
         style="@style/Base.Widget.AppCompat.Button.Colored"/>
 
@@ -62,7 +62,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/disconnect_bluetooth"
-        android:textColor="@color/black"
+        android:textColor="?android:textColorPrimary"
         android:layout_marginTop="16dp"
         style="@style/Base.Widget.AppCompat.Button.Colored"/>
 
@@ -73,7 +73,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/change_uuid"
-        android:textColor="@color/black"
+        android:textColor="?android:textColorPrimary"
         android:layout_marginTop="16dp"
         style="@style/Base.Widget.AppCompat.Button.Colored"/>
 
