--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:gravity="center_horizontal">
 
+    <!-- Deprecated
     <ImageButton
         android:id="@+id/bluetoothButton"
         android:layout_width="wrap_content"
@@ -16,11 +18,36 @@
         android:onClick="configureBluetoothButton"
         android:padding="24dp"
         android:scaleType="centerInside"
-        app:layout_constraintBottom_toTopOf="@+id/textNotification"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@android:drawable/stat_sys_data_bluetooth" />
+        -->
+
+    <TextView
+        android:id="@+id/btStatus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/click_the_icon_to_scan"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textColor="?android:textColorPrimary"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp" />
+
+    <ImageView
+        android:id="@+id/bluetoothButton"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:contentDescription="@string/todo" />
+
+    <TextView
+        android:id="@+id/connectStatus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/currently_not_connected"
+        android:textAlignment="center"
+        android:textSize="20sp"
+        android:textColor="?android:textColorPrimary"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp" />
 
     <TextView
         android:id="@+id/textNotification"
@@ -31,15 +58,10 @@
         android:ems="10"
         android:text="@string/defaultMsg"
         android:textAlignment="center"
-        android:textColor="?android:textColorPrimary"
+        android:textColor="?android:textColorPrimaryInverse"
         android:textSize="20sp"
-
-        app:layout_constraintBottom_toTopOf="@+id/editText"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.651" />
+        android:layout_marginTop="64dp"
+        android:layout_marginBottom="64dp" />
 
     <EditText
         android:id="@+id/editText"
@@ -56,11 +78,6 @@
         android:textColorHint="?android:textColorPrimaryInverse"
         android:textSize="18sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.579" />
+        android:layout_marginTop="64dp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
