--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:id="@+id/btStatus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="@string/click_the_icon_to_scan"
         android:textAlignment="center"
         android:textSize="20sp"
         android:textColor="?android:textColorPrimary"
