changed the edit text button so it runs function when newline is encountered

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -72,7 +72,8 @@
         android:background="?attr/colorSecondaryVariant"
         android:ems="10"
         android:hint="@string/inputNetID"
-        android:inputType="textPersonName"
+        android:inputType="textMultiLine"
+        android:imeOptions="actionSend"
         android:textAlignment="center"
         android:textColor="?android:textColorPrimary"
         android:textColorHint="?android:textColorPrimaryInverse"
