Hopeful fix for crash caused my mConnection.write() in MainActivity for editText.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,8 +71,7 @@
         android:autofillHints="NetID"
         android:background="?attr/colorSecondaryVariant"
         android:ems="10"
-        android:maxLength="9"
-        android:hint="@string/inputNetID"
+        android:hint="@string/inputCardID"
         android:inputType="textMultiLine"
         android:imeOptions="actionSend"
         android:textAlignment="center"
