Attendance list now properly gets the full list of attendance. Used handler instead to wait on "*". Added the handler to IOThread. Added checks for client disconnect. Cleaned up some logs and warnings. Added check for editText. Added more information by way of updating textView for user to read.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -54,14 +54,14 @@
         style="@style/Theme.ColeAttendanceProject"
         android:layout_width="300dp"
         android:layout_height="48dp"
+        android:layout_marginTop="64dp"
+        android:layout_marginBottom="64dp"
         android:background="?attr/colorPrimaryVariant"
         android:ems="10"
-        android:text="@string/defaultMsg"
+        android:text="@string/ready_to_swipe"
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="20sp"
-        android:layout_marginTop="64dp"
-        android:layout_marginBottom="64dp" />
+        android:textSize="20sp" />
 
     <EditText
         android:id="@+id/editText"
