--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
         android:layout_marginBottom="64dp"
         android:background="?attr/colorPrimaryVariant"
         android:ems="10"
-        android:text="@string/ready_to_swipe"
+        android:text="@string/not_connected"
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="20sp" />
