--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -45,7 +45,7 @@
         android:layout_height="wrap_content"
         android:minWidth="300dp"
         android:minHeight="75dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="64dp"
         android:background="@color/utd_orange"
         android:text="@string/clear_attendance_sheet"
         android:textColor="?android:textColorPrimary"
@@ -62,7 +62,20 @@
         android:text="@string/clear_signed_in_students"
         android:textColor="?android:textColorPrimary"
         android:textSize="16sp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="64dp"
+        style="@style/Base.Widget.AppCompat.Button.Colored"/>
+
+    <Button
+        android:id="@+id/reqAttend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:minWidth="300dp"
+        android:minHeight="75dp"
+        android:background="@color/utd_orange"
+        android:text="@string/request_new_attendance_sheet"
+        android:textColor="?android:textColorPrimary"
+        android:textSize="16sp"
+        android:layout_marginTop="64dp"
         style="@style/Base.Widget.AppCompat.Button.Colored"/>
 
     <Button
@@ -73,7 +86,7 @@
         android:layout_height="wrap_content"
         android:text="@string/change_uuid"
         android:textColor="?android:textColorPrimary"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="64dp"
         style="@style/Base.Widget.AppCompat.Button.Colored"/>
 
 </LinearLayout>
